<resources>
    <string name="app_name">ZenS_Android</string>
    <string name="sologan_jokes">A joke a day keeps the doctor away</string>
    <string name="sologan_jokes2">If you joke wrong way, your teeth have to pay. (serious)</string>
    <string name="btn_funny">This is Funny!</string>
    <string name="btn_notFunny">This is not funny.</string>
    <string name="txt_copyRight2">Copyright 2021 HLS</string>
    <string name="txt_copyRight">This app is created as part of HLsolutions program. The materials con-tained on this website are povided for general information only and do not constitute any fom of advice. HLS assumes no responsibility for the accuracy of any particular statement and accepts no liability for any loss or damage which may arise from reliance on the infor- mation contained on this site.</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="txt_message">That\'s all the jokes for today! Come back another day!</string>
</resources>