<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFFFFF">

                <ImageView
                    android:id="@+id/logoImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="9dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/logo"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/photoImageView"
                    android:layout_width="168dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="-1dp"
                    android:contentDescription="@string/todo2"
                    android:src="@drawable/photo"
                    tools:ignore="ImageContrastCheck,VisualLintBounds" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/greenLayout"
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:layout_below="@+id/headerLayout"
            android:layout_marginTop="22dp"
            android:background="#29b363"
            android:orientation="vertical"
            android:padding="16dp">

                <TextView
                    android:id="@+id/greenTextView"
                    android:layout_width="380dp"
                    android:layout_height="37dp"
                    android:text="@string/sologan_jokes"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/greenTextView2"
                    android:layout_width="382dp"
                    android:layout_height="30dp"
                    android:text="@string/sologan_jokes2"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/jokesLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:padding="16dp"
            android:layout_below="@id/greenLayout">

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/grayLayout"
            android:layout_width="407dp"
            android:layout_height="169dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="#FFFFFF"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="TextSizeCheck">


                <TextView
                    android:id="@+id/copyrightTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="104dp"
                    android:text="@string/txt_copyRight"
                    android:textAlignment="center"
                    android:textColor="#3C3C3C"
                    android:textColorHint="#555555"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="372dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_copyRight2"
                    android:textAlignment="center"
                    android:textColor="#3C3C3C"
                    android:textColorHint="#555555"
                    android:textSize="16sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/jokeTextView"
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="183dp"
            android:layout_marginBottom="316dp"
            android:padding="16dp"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:ignore="VisualLintBounds" />

        <Button
            android:id="@+id/dislikeButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="223dp"
            android:layout_marginTop="450dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="213dp"
            android:backgroundTint="#29b363"
            android:text="@string/btn_notFunny"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck,VisualLintOverlap,VisualLintButtonSize" />

        <Button
            android:id="@+id/likeButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="450dp"
            android:layout_marginEnd="223dp"
            android:layout_marginBottom="213dp"
            android:backgroundTint="#74D4FF"
            android:text="@string/btn_funny"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />

</RelativeLayout>


